k8s/overlays/dev/platform-admin-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-admin
spec:
  template:
    spec:
      containers:
      - name: platform-admin
